--- a/manageMeeting.html
+++ b/manageMeeting.html
@@ -41,6 +41,157 @@
     <link href="//fonts.googleapis.com/css?family=Mukta" rel="stylesheet" />
   </head>
   <body>
+    <!--Delete message -->
+    <div
+      class="modal fade"
+      id="deleteAlert"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="exampleModalCenterTitle"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">
+              Delete Message
+            </h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            Are you sure you want to delete this meeting?<br />
+            This cannot be undone.
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Close
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary"
+              onClick="replyDelete()"
+              data-dismiss="modal"
+            >
+              Delete
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Delete message ends -->
+
+    <!-- Pop out modal -->
+    <div
+      class="modal fade"
+      id="myModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="exampleModalCenterTitle"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">
+              Update Meeting Record
+            </h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <!-- Form starts here -->
+            <form>
+              <div class="form-group">
+                <label for="datepicker">Date*</label>
+                <input
+                  type="date"
+                  class="form-control"
+                  id="datepicker"
+                  required
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="starttime">Start Time*</label>
+                <input
+                  type="time"
+                  class="form-control"
+                  id="starttime"
+                  required
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="endtime">End Time*</label>
+                <input type="time" class="form-control" id="endtime" required />
+              </div>
+
+              <div class="form-group">
+                <label for="title">Title*</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="title"
+                  placeholder="Title of Meeting"
+                  required
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="venue">Venue*</label>
+                <select id="venue" class="custom-select" required>
+                  <option value="FSKTM">FCSIT</option>
+                  <option value="2">DK2, FCSIT</option>
+                  <option value="3">DK1, FCSIT</option>
+                </select>
+              </div>
+
+              <div class="form-group">
+                <label for="description">Descriptions</label>
+                <textarea
+                  class="form-control"
+                  id="description"
+                  rows="5"
+                  style="height:100%;"
+                  placeholder="The meeting descriptions"
+                ></textarea>
+              </div>
+            </form>
+            <!-- Form ends here -->
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">
+              Save changes
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Pop out modal ends-->
     <div class="wrapper">
       <!-- Sidebar Holder -->
       <nav id="sidebar">
@@ -116,46 +267,11 @@
           Manage Meeting Records
         </h1>
         <div class="row justify-content-center">
-          <div class="col-lg-8 col-md-12">
-            <div class="row justify-content-center">
-              <div
-                id="myCarousel"
-                class="carousel slide col-md-8 col-xs-12"
-                data-ride="carousel"
-                data-interval="false"
-              >
-                <div id="meetingrecord" class="carousel-inner w-100"></div>
-
-                <a
-                  class="carousel-control-prev"
-                  href="#myCarousel"
-                  role="button"
-                  data-slide="prev"
-                >
-                  <span
-                    class="carousel-control-prev-icon"
-                    aria-hidden="true"
-                  ></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a
-                  class="carousel-control-next"
-                  href="#myCarousel"
-                  role="button"
-                  data-slide="next"
-                >
-                  <span
-                    class="carousel-control-next-icon"
-                    aria-hidden="true"
-                  ></span>
-                  <span class="sr-only">Next</span>
-                </a>
-              </div>
-            </div>
-
+          <div class="col-md-12 col-sm-12">
+            <div id="meetingrecord" class="row justify-content-center"></div>
             <div class="notes mt-5 mb-2">
               <h2 style="color: #7BABED; text-align: center;" id="welcome">
-                Add your notes here...
+                Add Meeting Notes
               </h2>
               <div id="controls">
                 <i class="icon-doc-text" id="createNote"
