--- a/index.html
+++ b/index.html
@@ -83,10 +83,6 @@
         margin-left: auto;
         margin-right: auto;
       }
-
-      .btn-info {
-        border-color: #7ec4d3;
-      }
     </style>
   </head>
   <body>
@@ -141,7 +137,7 @@
             <button
               onclick="location.href = 'addMeeting.html';"
               type="submit"
-              class="btn btn-info col-5"
+              class="btn btn-primary col-5"
             >
               Login
             </button>
@@ -233,12 +229,12 @@
 
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-info">
+                  <button type="button" class="btn btn-primary">
                     Sign Up Now
                   </button>
                   <button
                     type="button"
-                    class="btn btn-secondary"
+                    class="btn btn-dark"
                     data-dismiss="modal"
                   >
                     Close
@@ -281,12 +277,12 @@
 
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-info">
+                  <button type="button" class="btn btn-primary">
                     Send confirmation email
                   </button>
                   <button
                     type="button"
-                    class="btn btn-secondary"
+                    class="btn btn-dark"
                     data-dismiss="modal"
                   >
                     Close
