--- a/old/manageMeeting.html
+++ b/old/manageMeeting.html
@@ -8,56 +8,38 @@
     <!-- Bootstrap CSS CDN -->
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
+      href="//stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
       integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="css/checklist/styleChecklist.css" />
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="css/style.css" />
     <!-- Font Awesome JS -->
     <script
       defer
-      src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
+      src="//use.fontawesome.com/releases/v5.0.13/js/solid.js"
       integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ"
       crossorigin="anonymous"
     ></script>
     <script
       defer
-      src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"
+      src="//use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"
       integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY"
       crossorigin="anonymous"
     ></script>
     <!-- Google Font -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto"
-      rel="stylesheet"
-    />
+    <link href="//fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
     <!-- icon -->
     <link
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+      href="//use.fontawesome.com/releases/v5.0.13/css/all.css"
       integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
       crossorigin="anonymous"
     />
-    <link
-      href="https://fonts.googleapis.com/css?family=Mukta"
-      rel="stylesheet"
-    />
-    <style>
-      tbody {
-        display: block;
-        max-height: 500px;
-        overflow-y: auto;
-      }
-      thead,
-      tbody tr {
-        display: table;
-        width: 100%;
-        table-layout: fixed;
-      }
-    </style>
+    <link rel="stylesheet" href="css/manageMeeting/meetingrecord.css" />
+    <link href="//fonts.googleapis.com/css?family=Mukta" rel="stylesheet" />
   </head>
-
   <body>
     <div class="wrapper">
       <!-- Sidebar Holder -->
@@ -71,8 +53,8 @@
           <li>
             <a href="addMeeting.html">Meeting Schedule</a>
           </li>
-          <li>
-            <a href="manageMeeting.html">Manage Meeting Records</a>
+          <li class="active">
+            <a href="#">Manage Meeting Records</a>
           </li>
           <li>
             <a href="checklist.html">Checklist</a>
@@ -80,8 +62,8 @@
           <li>
             <a href="progress.html">Manage Progress</a>
           </li>
-          <li class="active">
-            <a href="#">Review Reports</a>
+          <li>
+            <a href="reviewStudent.html">Review Reports</a>
           </li>
         </ul>
 
@@ -117,7 +99,9 @@
                   <a class="nav-link" href="#">Student</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="supervisor/reviewSupervisor.html"
+                  <a
+                    class="nav-link"
+                    href="supervisor/manageMeetingSupervisor.html"
                     >Supervisor</a
                   >
                 </li>
@@ -129,107 +113,68 @@
           class="text-center mt-3 mb-3"
           style="font-family: 'Mukta', sans-serif;color: #7BABED;"
         >
-          Submit Report
+          Manage Meeting Records
         </h1>
         <div class="row justify-content-center">
-          <div class="col-lg-6 col-md-8 col-sm-12">
-            <form>
-              <div class="form-group">
-                <label for="exampleInputEmail1">*Email address:</label>
-                <input
-                  type="email"
-                  class="form-control typeahead"
-                  id="exampleInputEmail1"
-                  aria-describedby="emailHelp"
-                  placeholder="Enter email of recipient"
-                />
-                <small id="emailHelp" class="form-text text-muted" required
-                  >Recipient email</small
-                >
-              </div>
-              <div class="form-group">
-                <label for="reportname">*Report Name:</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="reportname"
-                  placeholder="Name of report"
-                />
-              </div>
-              <div class="form-group">
-                <label for="fileSubmit">*Please Upload Your Report:</label>
-                <input
-                  type="file"
-                  id="fileSubmit"
-                  class="form-control"
-                  accept="image/*"
-                />
-              </div>
-              <div class="mt-3">
-                <button type="submit" class="btn btn-primary" required>
-                  Submit
-                </button>
-              </div>
-            </form>
-          </div>
-          <table class="table mt-5 ml-5 mr-5">
-            <thead class="thead-dark">
-              <tr>
-                <th>ID</th>
-                <th>Report Name</th>
-                <th>Submission Date</th>
-                <th>Reviewed by</th>
-                <th>Status</th>
-                <th>Comments</th>
-                <th>Attachments</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>Meeting report on March 31</td>
-                <td>2019-03-31</td>
-                <td></td>
-                <td>Pending</td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>Meeting report on March 29</td>
-                <td>2019-03-29</td>
-                <td>Dr Chiam Yin Kia</td>
-                <td>Reviewed</td>
-                <td>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Cupiditate, ad eligendi optio magnam praesentium, corrupti
-                  alias aut odit necessitatibus nostrum odio voluptatem voluptas
-                  quidem quasi veniam illum laboriosam voluptate dignissimos.
-                </td>
-                <td>
-                  <a href="#">Click to download</a>
-                </td>
-              </tr>
-              <tr>
-                <td>3</td>
-                <td>Meeting report on March 28</td>
-                <td>2019-03-28</td>
-                <td>Dr Chiam Yin Kia</td>
-                <td>Reviewed</td>
-                <td>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                  Cupiditate, ad eligendi optio magnam praesentium, corrupti
-                  alias aut odit necessitatibus nostrum odio voluptatem voluptas
-                  quidem quasi veniam illum laboriosam voluptate dignissimos.
-                </td>
-                <td>
-                  <a href="#">Click to download</a>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+          <div class="col-lg-8 col-md-12">
+            <div class="row justify-content-center">
+              <div
+                id="myCarousel"
+                class="carousel slide col-md-8 col-xs-12"
+                data-ride="carousel"
+                data-interval="false"
+              >
+                <div id="meetingrecord" class="carousel-inner"></div>
 
+                <a
+                  class="carousel-control-prev"
+                  href="#myCarousel"
+                  role="button"
+                  data-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a
+                  class="carousel-control-next"
+                  href="#myCarousel"
+                  role="button"
+                  data-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+            </div>
+
+            <div class="notes mt-5 mb-2">
+              <h2 style="color: #7BABED; text-align: center;" id="welcome">
+                Add your notes here...
+              </h2>
+              <div id="controls">
+                <i class="icon-doc-text" id="createNote"
+                  ><img src="img/button.png" alt="Button" height="30" width="30"
+                /></i>
+              </div>
+            </div>
+
+            <div class=" text-center">
+              <ul
+                id="myCard"
+                class="row justify-content-center"
+                style="padding-left: 20%; padding-right: 20%"
+              >
+                <!-- Add notes here -->
+              </ul>
+            </div>
+          </div>
+        </div>
         <footer class="footer">
           <div class="container">
             <hr />
@@ -256,19 +201,19 @@
     </div>
     <!-- jQuery CDN - Minified version -->
     <script
-      src="http://code.jquery.com/jquery-3.3.1.min.js"
+      src="//code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"
     ></script>
     <!-- Popper.JS -->
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
+      src="//cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
       integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
       crossorigin="anonymous"
     ></script>
     <!-- Bootstrap JS -->
     <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
+      src="//stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"
       integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
       crossorigin="anonymous"
     ></script>
@@ -280,6 +225,9 @@
         });
       });
     </script>
-    <script src="js/reviewStudent/autocomplete.js"></script>
+    <script
+      type="text/javascript"
+      src="js/manageMeeting/meetingrecord.js"
+    ></script>
   </body>
 </html>
