--- a/progress.html
+++ b/progress.html
@@ -55,10 +55,10 @@
 
         <ul class="list-unstyled components">
           <li>
-            <a href="addMeeting.html">Add Meeting</a>
+            <a href="addMeeting.html">Meeting Schedule</a>
           </li>
           <li>
-            <a href="manageMeeting.html">Meeting Records</a>
+            <a href="manageMeeting.html">Manage Meeting Records</a>
           </li>
           <li>
             <a href="checklist.html">Checklist</a>
@@ -113,157 +113,161 @@
         </nav>
         <h1
           class="text-center mt-3 mb-3"
-          style="font-family: 'Mukta', sans-serif;color: #7BABED; font-size: 4vw;"
+          style="font-family: 'Mukta', sans-serif;color: #7BABED;"
         >
           Research Progress
         </h1>
         <div class="container mt-3 p-3">
           <div id="chart_div"></div>
         </div>
-        <div class="container mt-3">
-          <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                id="pills-home-tab"
-                data-toggle="pill"
-                href="#pills-home"
-                role="tab"
-                aria-controls="pills-home"
-                aria-selected="true"
-                >Add Task</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                id="pills-profile-tab"
-                data-toggle="pill"
-                href="#pills-profile"
-                role="tab"
-                aria-controls="pills-profile"
-                aria-selected="false"
-                >Update Task</a
-              >
-            </li>
-          </ul>
-          <div class="tab-content" id="pills-tabContent">
-            <div
-              class="tab-pane fade show active"
-              id="pills-home"
-              role="tabpanel"
-              aria-labelledby="pills-home-tab"
-            >
-              <form>
-                <div class="form-group">
-                  <label for="taskname">Task Name: </label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="taskname"
-                    placeholder="Enter task name"
-                  />
-                </div>
-
-                <div class="form-group">
-                  <label for="sdate">Start Date: </label>
-                  <input type="date" class="form-control" id="sdate" />
-                </div>
-
-                <div class="form-group">
-                  <label for="edate">End Date: </label>
-                  <input type="date" class="form-control" id="edate" />
-                </div>
-
-                <div class="form-group">
-                  <label for="percent">Percent Complete</label>
-                  <input
-                    type="number"
-                    class="form-control"
-                    id="percent"
-                    placeholder="Enter the percent"
-                  />
-                </div>
-
-                <div class="form-group">
-                  <label for="depend">Dependencies</label>
-                  <select
-                    class="selectpicker form-control"
-                    id="depend"
-                    multiple
+        <div class="row justify-content-center">
+          <div class="col-lg-6 col-md-8 col-sm-12">
+            <div class="container mt-3">
+              <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                <li class="nav-item">
+                  <a
+                    class="nav-link active"
+                    id="pills-home-tab"
+                    data-toggle="pill"
+                    href="#pills-home"
+                    role="tab"
+                    aria-controls="pills-home"
+                    aria-selected="true"
+                    >Add Task</a
                   >
-                  </select>
-                </div>
-
-                <div class="form-group">
-                  <input
-                    class="btn btn-primary btn-lg"
-                    id="add"
-                    type="button"
-                    value="Add Task"
-                  />
-                </div>
-              </form>
-            </div>
-            <div
-              class="tab-pane fade"
-              id="pills-profile"
-              role="tabpanel"
-              aria-labelledby="pills-profile-tab"
-            >
-              <form>
-                <div class="form-group">
-                  <label for="taskname2">Task Name: </label>
-                  <select id="taskname2" class="custom-select" required>
-                  </select>
-                </div>
-
-                <div class="form-group">
-                  <label for="sdate2">Start Date: </label>
-                  <input type="date" class="form-control" id="sdate2" />
-                </div>
-
-                <div class="form-group">
-                  <label for="edate2">End Date: </label>
-                  <input type="date" class="form-control" id="edate2" />
-                </div>
-
-                <div class="form-group">
-                  <label for="percent2">Percent Complete</label>
-                  <input
-                    type="number"
-                    class="form-control"
-                    id="percent2"
-                    placeholder="Enter the percent"
-                  />
-                </div>
-
-                <div class="form-group">
-                  <label for="depend2">Dependencies</label>
-                  <select
-                    class="selectpicker form-control"
-                    id="depend2"
-                    multiple
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link"
+                    id="pills-profile-tab"
+                    data-toggle="pill"
+                    href="#pills-profile"
+                    role="tab"
+                    aria-controls="pills-profile"
+                    aria-selected="false"
+                    >Update Task</a
                   >
-                  </select>
-                </div>
+                </li>
+              </ul>
+              <div class="tab-content" id="pills-tabContent">
+                <div
+                  class="tab-pane fade show active"
+                  id="pills-home"
+                  role="tabpanel"
+                  aria-labelledby="pills-home-tab"
+                >
+                  <form>
+                    <div class="form-group">
+                      <label for="taskname">Task Name: </label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="taskname"
+                        placeholder="Enter task name"
+                      />
+                    </div>
 
-                <div class="form-group">
-                  <input
-                    class="btn btn-primary btn-lg"
-                    id="update"
-                    type="button"
-                    value="Update Task"
-                  />
+                    <div class="form-group">
+                      <label for="sdate">Start Date: </label>
+                      <input type="date" class="form-control" id="sdate" />
+                    </div>
 
-                  <input
-                    class="btn btn-primary btn-lg"
-                    id="remove"
-                    type="button"
-                    value="Remove Task"
-                  />
+                    <div class="form-group">
+                      <label for="edate">End Date: </label>
+                      <input type="date" class="form-control" id="edate" />
+                    </div>
+
+                    <div class="form-group">
+                      <label for="percent">Percent Complete</label>
+                      <input
+                        type="number"
+                        class="form-control"
+                        id="percent"
+                        placeholder="Enter the percent"
+                      />
+                    </div>
+
+                    <div class="form-group">
+                      <label for="depend">Dependencies</label>
+                      <select
+                        class="selectpicker form-control"
+                        id="depend"
+                        multiple
+                      >
+                      </select>
+                    </div>
+
+                    <div class="form-group">
+                      <input
+                        class="btn btn-primary"
+                        id="add"
+                        type="button"
+                        value="Add Task"
+                      />
+                    </div>
+                  </form>
                 </div>
-              </form>
+                <div
+                  class="tab-pane fade"
+                  id="pills-profile"
+                  role="tabpanel"
+                  aria-labelledby="pills-profile-tab"
+                >
+                  <form>
+                    <div class="form-group">
+                      <label for="taskname2">Task Name: </label>
+                      <select id="taskname2" class="custom-select" required>
+                      </select>
+                    </div>
+
+                    <div class="form-group">
+                      <label for="sdate2">Start Date: </label>
+                      <input type="date" class="form-control" id="sdate2" />
+                    </div>
+
+                    <div class="form-group">
+                      <label for="edate2">End Date: </label>
+                      <input type="date" class="form-control" id="edate2" />
+                    </div>
+
+                    <div class="form-group">
+                      <label for="percent2">Percent Complete</label>
+                      <input
+                        type="number"
+                        class="form-control"
+                        id="percent2"
+                        placeholder="Enter the percent"
+                      />
+                    </div>
+
+                    <div class="form-group">
+                      <label for="depend2">Dependencies</label>
+                      <select
+                        class="selectpicker form-control"
+                        id="depend2"
+                        multiple
+                      >
+                      </select>
+                    </div>
+
+                    <div class="form-group">
+                      <input
+                        class="btn btn-primary"
+                        id="update"
+                        type="button"
+                        value="Update Task"
+                      />
+
+                      <input
+                        class="btn btn-primary"
+                        id="remove"
+                        type="button"
+                        value="Remove Task"
+                      />
+                    </div>
+                  </form>
+                </div>
+              </div>
             </div>
           </div>
         </div>
