--- a/progress.html
+++ b/progress.html
@@ -70,7 +70,7 @@
             </button>
           </div>
           <div class="modal-body">
-            Are you sure you want to delete this meeting?<br />
+            Are you sure you want to delete this task?<br />
             This cannot be undone.
           </div>
           <div class="modal-footer">
